Version 1.2.1
-------------
- It was decieded to move `HybridAuth` config file to the yii's config diretory and rename to `hoauth.php`. Extension will try to do it automatically, when config diretory is not writable, it will run with config file from old directory, but old directory has the deprecated status.

Version 1.2
-----------

- HOAuthWiget property `$controllerId` replaced by `$route` and now you can specify route e.g. module/controller
- Modification of **HybridAuth** install script to generating `Endpoint URL` properly.
- Renaming of `user_oauth` table columns: `name` -> `provider`, `value` -> `identifier` (model will automatically update schema)
- New features in `UserOAuth.php` model.
- Support for `yii-user` extension