@@ -3,10 +3,11 @@
  * HOAuthAdminAction - administrative action. Helps to create config for HybridAuth
  * 
  * @uses CAction
- * @version 1.2
+ * @version 1.2.1
  * @copyright Copyright &copy; 2013 Sviatoslav Danylenko
  * @author Sviatoslav Danylenko <dev@udf.su> 
  * @license PGPLv3 ({@link http://www.gnu.org/licenses/gpl-3.0.html})
+ * @link https://github.com/SleepWalker/hoauth
  */
 class HOAuthAdminAction extends CAction
 {
