@@ -1,0 +1,7 @@
+<?php
+/**
+ * @var HOAuthAction $this
+ * @var HUserInfoForm $form
+ */
+
+echo $form->form;
